--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "smallH <472908522@qq.com>",
   "private": true,
   "scripts": {
+    "mock": "nodemon --watch mock --exec json-server mock/db.js --routes mock/router/routes.json",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
@@ -41,8 +42,11 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "json-server": "^0.12.1",
+    "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "nodemon": "^1.17.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
